fix: ui layout issues with bottom toolbar buttons

--- a/src/styles/brackets_patterns_override.less
+++ b/src/styles/brackets_patterns_override.less
@@ -200,11 +200,19 @@ a:focus {
         background-color: #3C3F41;
     }
 
+    .selected-button{
+        background-color: #3C3F41 !important;
+        border-style: solid !important;
+        border-color: #3C3F41 !important;
+        margin: 0px !important;
+        border-radius: 0px !important;
+    }
+
     .buttons,
     .bottom-buttons {
         text-align: center;
         justify-content: center;
-        margin: 0 3px 0 0;
+        margin: 0 0px 0 0;
 
         > a {
             border-radius: @bc-border-radius;
